--- a/page/css/default.css
+++ b/page/css/default.css
@@ -22,7 +22,8 @@ body {
    .container {margin: 40px auto; text-align: center;}
 
    img {margin-left: auto;
-    margin-right: auto}
+    margin-right: auto;
+    max-width: 100%;}
 
 
    .container-narrow {
