--- a/page/css/default.css
+++ b/page/css/default.css
@@ -3,67 +3,154 @@ body {
      padding-bottom: 40px;
    }
 
-   h1, h2 {
-    text-transform: lowercase;
+a {
+  color: #2856B6;
+}
+a:hover {
+  color: #2856B6;
+}
+
+.btn-custom {
+  background-color: #2856B6;
+  border-color: #2856B6;
+  color: white;
+}
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom:active,
+.btn-custom.active {
+  background-color: #0059af;
+  border-color: #004c95;
+  color: white;
+}
+
+h1, h2 {
     line-height: 1;
     font-weight: normal;
-   }
+}
 
-  h1 {
-     font-size: 80px;
-   }
-   h2 {
-     margin-top: 80px;
-   }
+h1 {
+  font-size: 40px;
+}
+h2 {
+  margin-top: 80px;
+}
 
-   p {margin-top: 20px;}
+p {margin-top: 20px;}
 
-   /* Custom container */
-   .container {margin: 40px auto; text-align: center;}
+/* Custom container */
+.container {}
 
-   img {margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;}
-
-
-   .container-narrow {
-     margin: 0 auto;
-     max-width: 800px;
-   }
-   .container-narrow > hr {
-     margin: 30px 0;
-   }
-
-   /* Main marketing message and sign up button */
-   .jumbotron {
-     margin: 0px 0;
-     background-color: white;
-     
-   }
-   
-
-    .jumbotron h2 {
-     font-size: 30px;
-     line-height: 1;
-     font-weight: normal;
-   }
-   .jumbotron .btn {
-     font-size: 21px;
-     padding: 14px 24px;
-   }
-
-   .footer {
-     margin-top: 120px;
-   }
+img {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;}
 
 
-   .main .float, .main .sidenote {
-    float:right;
-    width: 200px;
-    margin-right: -220px;
-    margin-top: 10px;
-    display: block;}
+.jumbotron {
+  text-align: center;
+  background-color: white;
+}
 
-    .sidenote {
-      font-size: 10px;
-    }
+.jumbotron .btn {
+  font-size: 21px;
+  padding: 14px 24px;
+}
+
+.jumbotron .lead {
+  margin-top: 20px;
+  font-size: 28px;
+  font-weight: 300;
+}
+
+/* CUSTOMIZE THE NAVBAR
+-------------------------------------------------- */
+
+#nav.affix {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index:100;
+}
+
+.navbar-default {
+  background-color: white;
+}
+
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
+.vspace{
+  padding-top: 80px;
+}
+
+/* Special class on .container surrounding .navbar, used for positioning it into place. */
+.navbar-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 20;
+}
+
+/* Flip around the padding for proper display in narrow viewports */
+.navbar-wrapper > .container {
+  padding-right: 0;
+  padding-left: 0;
+}
+.navbar-wrapper .navbar {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.navbar-wrapper .navbar .container {
+  width: auto;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 768px) {
+
+  /* Navbar positioning foo */
+  .navbar-wrapper {
+    margin-top: 20px;
+  }
+  .navbar-wrapper .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .featurette-heading {
+    margin-top: 120px;
+  }
+}
